Fixed The message "You are not authorized" exits the limits of the widget it's covering (STAGE-584) Changed react-grid-layout configuration to use normal layout instead of responsive Optimized default sizes (width, height) of few widgets

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -189,6 +189,7 @@ a:hover {
 
   .widgetItem{
     height: 100%;
+    overflow: auto;
   }
 }
 
